@@ -1,3 +1,9 @@
+2018-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-asahi.el (shimbun-asahi-content-start): Don't delete author's name
+	in the title area.
+	(shimbun-asahi-clear-contents): Remove garbage between title and body.
+
 2018-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-kyoko-np.el (shimbun-get-headers): Create date headers.
